--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.2
+  flutter_svg: ^2.0.8
+  flutter_keyboard_visibility: ^5.4.1
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +55,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
+  assets:
+    - lib/core/assets/input-icon.svg
+    - lib/core/assets/register.svg
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
